...
    private var alertPresenter: AlertPresenterProtocol?
    
    //MARK: - Lyfe cycle
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.accessibilityIdentifier = "UnsplashWebView"
        alertPresenter = AlertPresenter(delagate: self)
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
    }
}

...
